--- a/Report Demo ML Microplastic data.Rmd
+++ b/Report Demo ML Microplastic data.Rmd
@@ -1658,7 +1658,7 @@ for (ele in 100:130) {
 writexl::write_xlsx(x = sig_comp_CO100_130, path = "Wilcoxon_test_Combined HPLC-ICP_by_Robust Aichitson_HCA clustering result_CO100-130_zeroimputed_15Jan2024.xlsx")
 ```
 
-#### With just GC - TBA (ZeroImputed_Jan 15 2024)
+#### With just GC - DONE (ZeroImputed_Jan 18 2024)
 (Update 18 Jan 2024:) To maximise runtime, this will be run on Huy's Laptop
 
 ```{r, echo=FALSE, warning = FALSE, message=FALSE}
@@ -1747,7 +1747,7 @@ for (ele in 1:63) {
 # combine cut off dataframe
 # sig_comp <- c(sig_comp_CO0_55, sig_comp_CO56_75)
 
-writexl::write_xlsx(x = sig_comp_CO1_63, path = "Wilcoxon_test_GC_by_Robust Aichitson_HCA clustering result_CO1-63_zeroimputed_15Jan2024.xlsx")
+writexl::write_xlsx(x = sig_comp_CO1_63, path = "Wilcoxon_test_GC_by_Robust Aichitson_HCA clustering result_CO1-63_zeroimputed_18Jan2024.xlsx")
 ```
 
 ###### Summary of significant compounds
@@ -1784,7 +1784,7 @@ The code below run wilcoxcon test on NA imputed data frame and don't perform min
 
 After running the code with NA imputed data, it generates significant compounds (at best case for GCMS data =\> 31 significant compounds) as compared to Zero significant compounds if using Missing-Observation Method. Therefore, from now on, for Wilcoxon on HCA results, we impute both the HCA input and the Wilcoxon input in the same way.
 
-#### With just HPLC - TBA (ZeroImputed_Jan 15 2024) 
+#### With just HPLC - TBA (ZeroImputed_Jan 18 2024) 
 (Update 18 Jan 2024:) To maximise runtime, this will be run on Huy's Laptop
 
 ```{r, echo=FALSE, warning = FALSE, message=FALSE}
@@ -1815,10 +1815,10 @@ stats <- hc_df %>% tibble::rownames_to_column(., var = "File")
 
 
 # Initialize variables
-sig_comp_CO40_64 <- list()
+sig_comp_CO1_95 <- list()
 
 # Main loop
-for (ele in 40:64) {
+for (ele in 1:95) {
   t <- data.frame(group = cutree(hca, h = ceiling(hca$height[ele]))) %>% tibble::rownames_to_column(., var = "File")
   joined <- full_join(t, stats, by = "File")
   
@@ -1859,7 +1859,7 @@ for (ele in 40:64) {
   
   sp_df$adjusted_pvalue_holm <- stats::p.adjust(sp_df$pval_wilcox_test, method = "holm")
   
-  sig_comp_CO40_64[[paste0("Cut height_", ele)]] <- sp_df %>%
+  sig_comp_CO1_95[[paste0("Cut height_", ele)]] <- sp_df %>%
     filter(., adjusted_pvalue_holm < 0.05) %>%
     arrange(adjusted_pvalue_holm)
   
@@ -1868,15 +1868,14 @@ for (ele in 40:64) {
     arrange(adjusted_pvalue_holm))
 }
 
-# writexl::write_xlsx(x = sig_comp_CO65_95, path = "Wilcoxon_test_HPLC_by_Robust Aichitson_HCA clustering result_CO65-95_zeroimputed_15Jan2024.xlsx")
+writexl::write_xlsx(x = sig_comp_CO1_95, path = "Wilcoxon_test_HPLC_by_Robust Aichitson_HCA clustering result_CO1-95_zeroimputed_18Jan2024.xlsx")
 ```
 
-#### With just ICP - TBA (ZeroImputed_Jan 15 2024) 
+#### With just ICP - DONE (ZeroImputed_Jan 18 2024) 
 (Update 18 Jan 2024:) To maximise runtime, this will be run on Huy's Laptop
 
 ```{r, echo=FALSE, warning = FALSE, message=FALSE}
 hc_df <- icp_list[[1]] %>%
-  # filter(., File %notin% "ATDGCMS-Blank-repNA") %>%
   dplyr::select(File,
                 Feature, 
                 Values) %>%
@@ -1903,11 +1902,10 @@ stats <- hc_df %>% tibble::rownames_to_column(., var = "File")
 
 
 # Initialize variables
-# sig_comp_CO56_75 <- list()
-sig_comp_CO0_34<- list()
+sig_comp_CO1_34<- list()
 
 # Main loop
-for (ele in 0:34) {
+for (ele in 1:34) {
   t <- data.frame(group = cutree(hca, h = ceiling(hca$height[ele]))) %>% tibble::rownames_to_column(., var = "File")
   joined <- full_join(t, stats, by = "File")
   
@@ -1948,7 +1946,7 @@ for (ele in 0:34) {
   
   sp_df$adjusted_pvalue_holm <- stats::p.adjust(sp_df$pval_wilcox_test, method = "holm")
   
-  sig_comp_CO0_34[[paste0("Cut height_", ele)]] <- sp_df %>%
+  sig_comp_CO1_34[[paste0("Cut height_", ele)]] <- sp_df %>%
     filter(., adjusted_pvalue_holm < 0.05) %>%
     arrange(adjusted_pvalue_holm)
   
@@ -1960,7 +1958,7 @@ for (ele in 0:34) {
 # combine cut off dataframe
 # sig_comp <- c(sig_comp_CO0_55, sig_comp_CO56_75)
 
-writexl::write_xlsx(x = sig_comp_CO0_34, path = "Wilcoxon_test_ICP_by_Robust Aichitson_HCA clustering result_CO0-34_zeroimputed_15Jan2024.xlsx")
+writexl::write_xlsx(x = sig_comp_CO1_34, path = "Wilcoxon_test_ICP_by_Robust Aichitson_HCA clustering result_CO1-34_zeroimputed_18Jan2024.xlsx")
 ```
 
 ### Wilcoxon test without HCA clustering precursor
